--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,12 @@ version: "3"
 services:
   promtail:
     image: grafana/promtail:latest
+    ports:
+      - 3100:3100
     volumes:
       - /var/log:/var/log
       - ./config:/etc/promtail
-      - ./test_logs:/tmp/test_logs
-    command: -config.file=/etc/promtail/config.yaml
-    networks:
-      - promtail
-
-networks:
-  promtail:
-    external: True
-    name: grafana_network
+      - ${HOME}/.octoprint/logs:/tmp/octoprint_logs:ro #set paths to log files here
+    command: -config.file=/etc/promtail/config.yaml -config.expand-env=true
+    env_file:
+      - .env
